<resources>
    <string name="app_name">Add Place</string>
    <string name="title_activity_maps">Map</string>
    <string name="service_options">خيارات الخدمة</string>
    <string name="drive_through">الايصال الى السيارة</string>
    <string name="delivery">خدمة التوصيل</string>
    <string name="curbside_pick_up">خدمة الطلب أثناء القيادة</string>
    <string name="takeaway">طعام سفري</string>
    <string name="dine_in">الأكل داخل المكان</string>
    <string name="outdoor_seating">أماكن جلوس في الهواء الطلق</string>
    <string name="health_and_safety">الصحة والسلامة</string>
    <string name="reservations_required">الحجوزات المسبقة مطلوبة</string>
    <string name="highlights">أهم السمات</string>
    <string name="great_views">إطلالات رائعة</string>
    <string name="sport">ألعاب رياضية</string>
    <string name="rooftop_seating">أماكن جلوس على السطح</string>
    <string name="great_dessert">حلويات رائعة</string>
    <string name="fast_service">خدمة سريعة</string>
    <string name="great_coffee">قهوة رائعة</string>
    <string name="great_drinks">مشروبات رائعة</string>
    <string name="live_music">موسيقى</string>
    <string name="accessibility">إمكانية الوصول</string>
    <string name="wheelchair_accessible_seating">أماكن صالحة للكراسي المتحركة</string>
    <string name="wheelchair_accessible_toilet">دورة مياة صالحة للكراسي المتحركة</string>
    <string name="wheelchair_accessible_entry">مدخل صالح للكراسي المتحركة</string>
    <string name="wheelchair_accessible_lift">مصعد صالح للكراسي المتحركة</string>
    <string name="wheelchair_accessible_car_park">موقف سيارات صالح للكراسي المتحركة</string>
    <string name="offerings">الخدمات المقدمة</string>
    <string name="salad_bar">بوفيه سلطات</string>
    <string name="healthy_options">أكلات صحية</string>
    <string name="vegetarian_options">خيارات نباتية</string>
    <string name="discount">عروض تخفيضات</string>
    <string name="kids_menu">قائمة طعام للأطفال</string>
    <string name="all_ypu_can_eat">كل ما يمكنك أكله</string>
    <string name="late_night_food">مأكولات في ساعات متأخرة من الليل</string>
    <string name="small_plates">وجبات خفيفة</string>
    <string name="dining_options">خيارات تناول الطعام</string>
    <string name="breakfast">فطور</string>
    <string name="lunch">غداء</string>
    <string name="dinner">عشاء</string>
    <string name="catering">خدمات التزويد بالطعام</string>
    <string name="counter_service">الخدمة عند الكاونتر</string>
    <string name="dessert">الحلويات</string>
    <string name="seating">أماكن جلوس</string>
    <string name="amenities">وسائل الراحة</string>
    <string name="high_chairs">الكراسي العالية</string>
    <string name="bar_on_site">داخل المكان</string>
    <string name="toilets">دورة مياه</string>
    <string name="good_for_ksds">مناسب للأطفال</string>
    <string name="atmosphere">الأجواء</string>
    <string name="romantic">رومنسي</string>
    <string name="upmarket">عالي المستوى</string>
    <string name="casual">غير رسمي</string>
    <string name="cosy">مريح</string>
    <string name="lively">مفعم بالحيوية</string>
    <string name="historic">يحمل طابعا تاريخيا</string>
    <string name="quiet">هادئ</string>
    <string name="crowd">الجمهور</string>
    <string name="locals">سكان محليون</string>
    <string name="tourists">سياح</string>
    <string name="university_students">طلاب جامعة</string>
    <string name="groups">مجموعات</string>
    <string name="family_friendly">مناسب للعائلات</string>
    <string name="planning">التخطيط</string>
    <string name="brunch_reservations_recommended">حجوزات الافطار المتأخر</string>
    <string name="lunch_reservations_recommended">حجوزات الغداء</string>
    <string name="dinner_reservations_recommended">حجوزات العشاء</string>
    <string name="accepts_reservations">قبول الحجوزات</string>
    <string name="usually_a_wait">يلزم الانتظار</string>
    <string name="payment">الدفع</string>
    <string name="cash_only">الدفع النقدي فقط</string>
    <string name="cheques">الشيكات</string>
    <string name="debit_card">بطاقة السحب الآلي</string>
    <string name="nfc_mobile_payments">الدفع عن طريق NFC</string>
    <string name="north">الشمال</string>
    <string name="rafah">رفح</string>
    <string name="kahan_yunis">خان يونس</string>
    <string name="central">الوسطى</string>
    <string name="gaza">غزة</string>
    <string name="restaurant">مطعم</string>
    <string name="coffee_shop">كفي شوب</string>
    <string name="ice_cream">مرطبات</string>
    <string name="coffee">قهوة</string>
    <string name="sweets">حلويات</string>
</resources>