<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/main_features"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/highlights"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="mainFeatures"
            android:text="@string/great_views" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="mainFeatures"
            android:text="@string/sport" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="mainFeatures"
            android:text="@string/rooftop_seating" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="mainFeatures"
            android:text="@string/great_dessert" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="mainFeatures"
            android:text="@string/fast_service" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="mainFeatures"
            android:text="@string/great_coffee" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="mainFeatures"
            android:text="@string/great_drinks" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="mainFeatures"
            android:text="@string/live_music" />

    </LinearLayout>
</merge>