<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/atmosphere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/atmosphere"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="atmosphereClicked"
            android:text="@string/romantic" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="atmosphereClicked"
            android:text="@string/upmarket" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="atmosphereClicked"
            android:text="@string/casual" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="atmosphereClicked"
            android:text="@string/cosy" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="atmosphereClicked"
            android:text="@string/lively" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="atmosphereClicked"
            android:text="@string/historic" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="atmosphereClicked"
            android:text="@string/quiet" />


    </LinearLayout>
</merge>