<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/eat_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/dining_options"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="eatOptionsClicked"
            android:text="@string/breakfast" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="eatOptionsClicked"
            android:text="@string/lunch" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="eatOptionsClicked"
            android:text="@string/dinner" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="eatOptionsClicked"
            android:text="@string/catering" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="eatOptionsClicked"
            android:text="@string/counter_service" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="eatOptionsClicked"
            android:text="@string/dessert" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="eatOptionsClicked"
            android:text="@string/seating"
            tools:ignore="HardcodedText" />

    </LinearLayout>
</merge>