<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/the_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/crowd"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="thePublicClicked"
            android:text="@string/locals" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="thePublicClicked"
            android:text="@string/tourists" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="thePublicClicked"
            android:text="@string/university_students" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="thePublicClicked"
            android:text="@string/groups" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dp"
            android:onClick="thePublicClicked"
            android:text="@string/family_friendly" />



    </LinearLayout>
</merge>